# AUV

./: README.md  main.py
Docker/gazebo_docker/: Dockerfile  build_gazebo.sh  start_gazebo.sh
Lower Level Code/IMU/: sensorTalker.py  serial_imu.py
Lower Level Code/Jetson/: T200 Data.csv  i2cpwmtest.py  pid_control.py  pwm_to_thrust.py  xbox_controller.py
Lower Level Code/Motor Thrusters/Archive/: 18voltage.csv
docker/docker_test/: Dockerfile
docker/gazebo_docker/: Dockerfile  stop_gazebo.sh
docker/gazebo_docker/kinetic/: Dockerfile
docker/gazebo_docker/melodic/: start_gazebo.sh
lower-level-code/imu/: osc_decoder.py  sensorListener.py
lower-level-code/jetson/ros/: listener.py  zed-imu-publisher.py  zed-publisher.py
lower-level-code/thruster-control/: pwm_to_thrust.py  ros-pwm-service.py
simulation/: create_waypoint.sh  listener.py  pid_control.py  teleop_test.sh  test.py  thrustercontrol.py
simulation/image_capture/: image_capture.py  image_process_test.py
simulation/mantaray_control/: CMakeLists.txt  package.xml
simulation/mantaray_description/: CMakeLists.txt  README.md  package.xml
simulation/uuv_control_example/: CMakeLists.txt  package.xml
simulation/uuv_control_example/config/mantaray/: TAM.yaml
simulation/uuv_control_example/config/rov_example/: thruster_manager.yaml
simulation/uuv_control_example/launch/: thruster_manager.launch
sub-control-ros/: README.md  custom_util.py  fsm.py  fsm_basic.py  fsm_pcontrol.py  fsm_state.py  kalman_filter.py  main.py  pid_control.py  qp_attitude_controller.py  requirements.txt
(+76 files in other folders)
